@@ -31,6 +31,7 @@ Improved generated TZX and PZX files: include date and ZEsarUX version in header
 Improved Custom machine menu: added +2E MMC machine
 
 Improved Z88 emulation:
+-Menu item to synchronize Z88 clock
 -Inserting Z88 cards: now it does not hang the emulator during the insert
 -Selecting Z88 cards: submenus for types and sizes
 -Z88 footer: show when writing a card in slot 3, colors follow style
